# Lidar_AI_Solution

./: .gitignore  .gitmodules  readme.md
CUDA-BEVFusion/: CMakeLists.txt
CUDA-BEVFusion/src/: main.cpp
CUDA-CenterPoint/: CMakeLists.txt
CUDA-CenterPoint/data/: vis.py
pointpillars_ws/src/CUDA-CenterPoint/: .gitattributes  CMakeLists.txt  main.cpp  package.xml
pointpillars_ws/src/CUDA-CenterPoint/launch/: cuda.launch  lidar_rviz.rviz  start_multiple.launch
pointpillars_ws/src/CUDA-CenterPoint/src/: centerpoint.cpp
pointpillars_ws/src/CUDA-PointPillars/: .gitignore  CMakeLists.txt  lidar_pp.cpp  main.cpp  package.xml
pointpillars_ws/src/CUDA-PointPillars/eval/kitti/object/pred_velo/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt
pointpillars_ws/src/CUDA-PointPillars/launch/: cuda.launch  cuda_new_lidar.launch  lidar_rviz.rviz  start_multiple.launch  start_new_lidar.launch
pointpillars_ws/src/bevfusion/: CMakeLists.txt  package.xml  pi_readmi.md  readme.md
pointpillars_ws/src/bevfusion/launch/: run.launch
pointpillars_ws/src/bevfusion/scripts/: test_pub.py
pointpillars_ws/src/bevfusion/src/: img_process.cpp  main.cpp  pub_msg.cpp  sub_msg.cpp
pointpillars_ws/src/bevfusion/tool/: environment.sh
pointpillars_ws/src/cia_ssd_ai_trt/: CMakeLists.txt  package.xml
pointpillars_ws/src/cia_ssd_ai_trt/launch/: cuda.launch  lidar_rviz.rviz  run.launch  run_single.launch
pointpillars_ws/src/cia_ssd_ai_trt/src/: CMakeLists.txt  cia-ssd-ai-trt.cpp  lidar_cia.cpp
pointpillars_ws/src/lidar_detection/: CMakeLists.txt  package.xml
pointpillars_ws/src/lidar_detection/launch/: cia.launch  lidar_rviz.rviz  pp.launch  readme.md  run_all.launch
pointpillars_ws/src/lidar_detection/src/: main.cpp
pointpillars_ws/src/rs_to_velodyne/include/: ground_filter.h
pointpillars_ws/src/rs_to_velodyne/src/: ground_filter.cpp  rs_to_velodyne.cpp
